refactoring some classes and implementing hateoas links

--- a/microservice/build.gradle
+++ b/microservice/build.gradle
@@ -53,5 +53,6 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('org.postgresql:postgresql')
 	runtime('org.hsqldb:hsqldb')
+    testCompile("com.jayway.jsonpath:json-path")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
